--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -1,17 +1,18 @@
 [flake8]
-max-line-length = 120
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+max-line-length = 88
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,.venv
+max-complexity = 10
 
 [pycodestyle]
-max-line-length = 120
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+max-line-length = 88
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,.venv
 
 [isort]
 line_length = 88
 known_first_party = {{cookiecutter.project_slug}},config
 multi_line_output = 3
 default_section = THIRDPARTY
-skip = venv/
+skip = .venv/
 skip_glob = **/migrations/*.py
 include_trailing_comma = true
 force_grid_wrap = 0
@@ -22,3 +23,6 @@ include = {{cookiecutter.project_slug}}/*
 omit = *migrations*, *tests*
 plugins =
     django_coverage_plugin
+
+[tool.pyright]
+exclude = **/node_modules,**/__pycache__,.git,migrations
