--- a/{{cookiecutter.project_slug}}/.github/workflows/ci.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
             requirements/base.txt
             requirements/local.txt
 
-      - name: Lint & check types
-        uses: make check
+      - name: Run pre-commit
+        uses: pre-commit/action@v2.0.3
 
   # With no caching at all the entire ci process takes 4m 30s to complete!
   pytest:
