Use black profile for flake8

--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -17,6 +17,7 @@ skip_glob = **/migrations/*.py
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
+profile = black
 
 [coverage:run]
 include = {{cookiecutter.project_slug}}/*
